# pdf_extract

./: .gitignore  Makefile  README.md  pyproject.toml
pdf_extract/: cli.py  interface.py  java_extractor.py  pdfbox_extractor.py  pdfminer_extractor.py  pdfplumber_extractor.py  tesseract_extractor.py  utils.py
scripts/: extract_text_from_proceedings.py
tests/: cli_test.py  conftest.py  java_env_test.py  java_extractor_test.py  pdf_extract_test.py  pdfbox_extractor_test.py  pdfminer_extractor_test.py  pdfplumber_extractor_test.py  tesseract_env_test.py  tesseract_extractor_test.py  utils_test.py
tests/fixtures/expected/alto/: test_0001.alto
tests/fixtures/expected/hocr/: test_0001.hocr
tests/fixtures/expected/pdfbox_page_numbers/: test.txt
tests/fixtures/expected/pdfplumber/extract_text/: test.txt  test_no_page_numbers.txt
tests/fixtures/expected/tesseract/extract_text/: 2_pages_1_empty.txt  2_pages_1_empty_2-2.txt
tests/fixtures/expected/tesseract/extract_text_with_page_numbers/: 2_pages_1_empty.txt  2_pages_1_empty_2-2.txt
